# opsagent

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  health_check.py  pyproject.toml
.claude/: settings.local.json
data/: README.md
docs/: architecture.md  handoff_to_claude_code.md
docs/architecture/: pipeline_day9.mmd
scripts/: build_vectorstore.py  csv_to_sqlite.py  inspect_db.py  inspect_qdrant.py
src/: __init__.py  config.py
src/agents/: action_recommender.py  output_validator.py  report_generator.py  root_cause.py  schemas.py  signal_detector.py
src/data/: anomaly_catalog.py  build_dataset.py  generator.py
src/observability/: __init__.py
src/pipeline/: graph.py  nodes.py  state.py
src/rag/: __init__.py  chunking.py  embeddings.py  retriever.py  vector_store.py
src/tools/: data_query.py  metric_calculator.py  rag_retriever.py
tests/: test_agents.py
