[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsagent"
version = "0.1.0"
description = "AI Operations Co-Pilot — multi-agent system for business metrics monitoring"
requires-python = ">=3.11"

dependencies = [
    # Agent orchestration (Phase 2)
    "langgraph>=1.1.0,<2.0.0",
    "langchain-core>=1.2.0,<2.0.0",
    "langchain-groq>=1.1.0,<2.0.0",

    # LLM APIs
    "groq>=0.30.0,<1.0.0",
    "google-generativeai>=0.8.0,<1.0.0",

    # Vector database & embeddings
    "qdrant-client>=1.11.0,<2.0.0",
    "sentence-transformers>=3.2.0,<4.0.0",

    # Data processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",

    # Structured output & validation
    "pydantic>=2.9.0",

    # ============================================
    # Defer to Phase 3-4 (uncomment when needed)
    # ============================================
    # "ragas>=0.2.0",              # Day 21+ — eval framework
    # "langfuse>=2.0.0",           # Day 18+ — observability
    # "streamlit>=1.39.0",         # Day 25+ — dashboard
    # "plotly>=5.24.0",            # Day 25+ — charts
    # "fastapi>=0.115.0",          # Day 26+ — n8n integration
    # "uvicorn>=0.31.0",           # Day 26+ — server

    # Utilities (active in Phase 1-2)
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
